# Indie-Studio

./: .gitignore  CMakeLists.txt  README.md
cmake/: Findraylib.cmake
include/: BaseComponent.hpp  Object.hpp  cameraModule.hpp  renderModule.hpp  scene.hpp
include/Core/: AI.hpp  Bomb.hpp  Bomba.hpp  Core.hpp  MainExceptions.hpp  Menus.hpp  Parameters.hpp  Player.hpp  gameLogic.hpp
include/Core/Menus/: Game.hpp  GameOver.hpp  MainMenu.hpp  Mid.hpp  PauseMenu.hpp  Settings.hpp  Victory.hpp
include/Engine/: SceneManager.hpp  console.hpp
include/Engine/CameraModule/: CameraHandler.hpp
include/Engine/InputModule/: inputHandler.hpp
include/Engine/MapModule/: mapModule.h
include/Engine/Messages/: CollisionBox.cpp  CollisionBox.hpp  MessageNode.hpp  MsgNode.hpp  RenderComponent.hpp  msg.hpp
include/Engine/Objects/: BaseComponent.hpp  Object.hpp  RenderComponent.hpp  renderModule.hpp
include/Engine/SoundModule/: SoundHandler.hpp
include/InputModule/: inputHandler.hpp
include/Messages/: messageBus.hpp  msg.hpp
resources/bomb/: bomb.gltf
src/: BaseComponent.cpp  Object.cpp  SceneManager.hpp  gameLogic.cpp  inputHandler.cpp  inputHandler.hpp  main.cpp  scene.cpp  system.cpp  system.hpp
src/Core/: AI.cpp  Core.cpp  MainExceptions.cpp  Parameters.cpp  Player.cpp  gameLogic.cpp
src/Core/Menus/: Bomb.cpp  Bomba.cpp  Game.cpp  GameOver.cpp  MainMenu.cpp  Mid.cpp  PauseMenu.cpp  Settings.cpp  Victory.cpp
src/Engine/: RenderComponent.cpp  SceneManager.cpp  console.cpp
src/Engine/CameraModule/: CameraHandler.cpp
src/Engine/InputModule/: inputHandler.cpp
src/Engine/MapModule/: MapModule.cpp
src/Engine/Messages/: MsgNode.cpp  cameraModule.cpp  cameraModule.hpp  msg.cpp  renderModule.cpp  renderModule.hpp
src/Engine/Objects/: BaseComponent.cpp  Object.cpp  RenderComponent.cpp
src/Engine/RenderModule/: renderModule.cpp
src/Engine/SoundModule/: SoundHandler.cpp
src/Input Module/: command.cpp  command.hpp  inputHandler.cpp
src/Messages/: MessageNode.cpp  messageBus.cpp  msg.cpp
